Fixing breadcrumbs, truncating WIP

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,6 +22,7 @@ body {
     margin: 0 auto;
     padding: 0 var(--content-padding);
     display: flex;
+    flex-wrap: nowrap;
 }
 
 .wrapper * {
@@ -30,13 +31,24 @@ body {
 }
 
 .breadcrumbs {
-    flex: 1;
+    flex: 1 0 0;
     padding: 0 30px;
+    display: flex;
+    overflow: hidden;
+    white-space: nowrap;
+}
 
+.breadcrumbs * {
+    font-size: 1rem;
 }
 
 #menu-btn, .menu-btn {
     display: none;
+}
+
+
+.navbar {
+    flex: 0 0 auto;
 }
 
 .navbar li {
